<?xml version="1.0"?>
<package>
  <name>coverage</name>
  <version>0.0.1</version>
  <description>The coverage package</description>

  <maintainer email="sj.yang@skku.edu">SKKU_CnR</maintainer>
  <license>SKKU_CnR</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

<!--  <build_export_depend>roscpp</build_export_depend>-->
<!--  <build_export_depend>std_msgs</build_export_depend>-->

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
